cabal-version: 3.0
name: marlowe-chain-sync
version: 0.0.0.0
synopsis:
  Cardano chain sync system for thee Marlowe Runtime
description:
  Marlowe runtime component for Cardano node synchronization. Communicates with
  downstream compoents using the Chain Seek protocol, which provides
  efficient push and pull-based traversal of the cardano blockchain.
bug-reports: https://github.com/input-output-hk/marlowe-cardano/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: marlowe-chain-sync

common lang
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import: lang
  hs-source-dirs:   src
  exposed-modules:
    Language.Marlowe.Runtime.Cardano.Api
    Language.Marlowe.Runtime.Cardano.Feature
    Language.Marlowe.Runtime.ChainSync.Api
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , base16
    , binary
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , containers
    , marlowe-protocols
    , nonempty-containers
    , ouroboros-consensus
    , ouroboros-network
    , plutus-tx
    , plutus-ledger-api
    , serialise
    , text
    , these
    , time
    , typed-protocols
    , vector

library libchainseek
  import: lang
  hs-source-dirs:   libchainseek
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.ChainSync
    Language.Marlowe.Runtime.ChainSync.Database
    Language.Marlowe.Runtime.ChainSync.Database.PostgreSQL
    Language.Marlowe.Runtime.ChainSync.JobServer
    Language.Marlowe.Runtime.ChainSync.Server
    Language.Marlowe.Runtime.ChainSync.QueryServer
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , async-components
    , bytestring
    , cardano-api
    , cardano-binary
    , containers
    , foldl
    , hasql
    , hasql-th
    , hasql-transaction
    , marlowe-chain-sync
    , marlowe-protocols
    , nonempty-containers
    , ouroboros-network
    , these
    , transformers
    , vector
  visibility: public

library chain-indexer
  import: lang
  hs-source-dirs:   chain-indexer
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.ChainIndexer
    Language.Marlowe.Runtime.ChainIndexer.Database
    Language.Marlowe.Runtime.ChainIndexer.Database.PostgreSQL
    Language.Marlowe.Runtime.ChainIndexer.Genesis
    Language.Marlowe.Runtime.ChainIndexer.NodeClient
    Language.Marlowe.Runtime.ChainIndexer.Store
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async-components
    , base16
    , bytestring
    , cborg
    , cardano-api
    , cardano-binary
    , cardano-crypto-wrapper
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-byron
    , cardano-ledger-core
    , cardano-ledger-shelley
    , containers
    , eventuo11y
    , eventuo11y-extras
    , hasql
    , hasql-th
    , hasql-transaction
    , marlowe-chain-sync
    , ouroboros-network
    , profunctors
    , stm
    , stm-delay
    , text
    , time
    , transformers
    , typed-protocols
    , vector
    , witherable
  visibility: public

library plutus-compat
  import: lang
  hs-source-dirs:   plutus-compat
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Plutus.V2.Api
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , bytestring
    , cardano-api
    , cardano-ledger-byron
    , containers
    , marlowe-chain-sync
    , plutus-tx
    , plutus-ledger-api
    , serialise

executable marlowe-chain-indexer
  import: lang
  ghc-options: -threaded
  hs-source-dirs:   marlowe-chain-indexer
  main-is: Main.hs
  other-modules:
    Logging
    Options
    Paths_marlowe_chain_sync
  autogen-modules:
    Paths_marlowe_chain_sync
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async-components
    , cardano-api
    , cardano-crypto-wrapper
    , cardano-ledger-byron
    , eventuo11y
    , eventuo11y-extras
    , hasql
    -- Consider removing the hasql < 1.6 constraint in cabal.project if updating hasql-pool
    , hasql-pool < 0.6
    , marlowe-chain-sync:chain-indexer
    , optparse-applicative
    , ouroboros-network
    , text
    , time
    , transformers
    , uuid
  visibility: public

executable chainseekd
  import: lang
  ghc-options: -threaded
  hs-source-dirs:   chainseekd
  main-is: Main.hs
  other-modules:
    Logging
    Options
    Paths_marlowe_chain_sync
  autogen-modules:
    Paths_marlowe_chain_sync
  build-depends:
      base >= 4.9 && < 5
    , async-components
    , cardano-api
    , cardano-ledger-byron
    , eventuo11y
    , eventuo11y-extras
    , hasql
    -- Consider removing the hasql < 1.6 constraint in cabal.project if updating hasql-pool
    , hasql-pool < 0.6
    , marlowe-chain-sync
    , marlowe-chain-sync:libchainseek
    , marlowe-protocols
    , network
    , optparse-applicative
    , ouroboros-network
    , text
    , time
    , uuid

executable example-client
  import: lang
  ghc-options: -threaded
  hs-source-dirs: example-client
  main-is: Main.hs
  other-modules:
    SkippingBlocks
    FollowingUTxOs
    Paths_marlowe_chain_sync
  autogen-modules:
    Paths_marlowe_chain_sync
  build-depends:
      base >= 4.9 && < 5
    , marlowe-chain-sync
    , marlowe-protocols
    , network
    , optparse-applicative
    , typed-protocols
