cabal-version: 3.0
name: marlowe-chain-sync
version: 0.0.1
synopsis:
  Cardano chain sync system for thee Marlowe Runtime.
description:
  Marlowe runtime component for Cardano node synchronization. Communicates with
  downstream compoents using the Chain Sync protocol, which provides
  efficient push and pull-based traversal of the cardano blockchain.
bug-reports: https://github.com/input-output-hk/marlowe-cardano/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: marlowe-chain-sync

common lang
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import: lang
  hs-source-dirs:   src
  exposed-modules:
    Language.Marlowe.Runtime.Cardano.Api
    Language.Marlowe.Runtime.Cardano.Feature
    Language.Marlowe.Runtime.ChainSync.Api
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , base16
    , binary
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , containers
    , marlowe-protocols
    , nonempty-containers
    , ouroboros-consensus
    , ouroboros-network
    , plutus-tx
    , plutus-ledger-api
    , serialise
    , text
    , these
    , time
    , vector

library libchainsync
  import: lang
  hs-source-dirs:   libchainsync
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.ChainSync
    Language.Marlowe.Runtime.ChainSync.Database
    Language.Marlowe.Runtime.ChainSync.Database.PostgreSQL
    Language.Marlowe.Runtime.ChainSync.JobServer
    Language.Marlowe.Runtime.ChainSync.NodeClient
    Language.Marlowe.Runtime.ChainSync.Server
    Language.Marlowe.Runtime.ChainSync.QueryServer
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async-components
    , bytestring
    , cardano-api
    , cardano-binary
    , containers
    , eventuo11y ^>= { 0.9, 0.10 }
    , eventuo11y-extras
    , foldl
    , hasql
    , hasql-th
    , hasql-transaction
    , marlowe-chain-sync
    , marlowe-protocols
    , nonempty-containers
    , ouroboros-network
    , stm
    , text
    , transformers
    , vector

library chain-indexer
  import: lang
  hs-source-dirs:   chain-indexer
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.ChainIndexer
    Language.Marlowe.Runtime.ChainIndexer.Database
    Language.Marlowe.Runtime.ChainIndexer.Database.PostgreSQL
    Language.Marlowe.Runtime.ChainIndexer.Genesis
    Language.Marlowe.Runtime.ChainIndexer.NodeClient
    Language.Marlowe.Runtime.ChainIndexer.Store
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async-components
    , base16
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-crypto-wrapper
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-byron
    , cardano-ledger-core
    , cardano-ledger-shelley
    , containers
    , eventuo11y ^>= { 0.9, 0.10 }
    , eventuo11y-extras
    , hasql
    , hasql-th
    , hasql-transaction
    , marlowe-chain-sync
    , ouroboros-network
    , profunctors
    , stm
    , stm-delay
    , text
    , time
    , transformers
    , typed-protocols
    , vector
    , witherable

library plutus-compat
  import: lang
  hs-source-dirs:   plutus-compat
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Plutus.V2.Api
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , bytestring
    , cardano-api
    , cardano-ledger-byron
    , containers
    , marlowe-chain-sync
    , plutus-tx
    , plutus-ledger-api
    , serialise

library gen
  import: lang
  hs-source-dirs: gen
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.ChainSync.Gen
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , bytestring
    , cardano-api
    , cardano-api:gen
    , hedgehog-quickcheck
    , marlowe-chain-sync
    , marlowe-protocols
    , nonempty-containers
    , ouroboros-consensus
    , QuickCheck
    , text
    , these
    , time

test-suite marlowe-chain-sync-test
  import: lang
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Language.Marlowe.Runtime.ChainSync.ApiSpec
    Paths_marlowe_chain_sync
  build-depends:
      base >= 4.9 && < 5
    , hspec
    , marlowe-chain-sync
    , marlowe-chain-sync:gen
    , marlowe-protocols
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options: -threaded

executable marlowe-chain-indexer
  import: lang
  ghc-options: -threaded
  hs-source-dirs:   marlowe-chain-indexer
  main-is: Main.hs
  other-modules:
    Logging
    Options
    Paths_marlowe_chain_sync
  autogen-modules:
    Paths_marlowe_chain_sync
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , aeson-pretty
    , async-components
    , cardano-api
    , cardano-crypto-wrapper
    , cardano-ledger-byron
    , containers
    , eventuo11y ^>= { 0.9, 0.10 }
    , eventuo11y-extras
    , hasql
    , hasql-pool ^>= 0.8
    , marlowe-chain-sync:chain-indexer
    , optparse-applicative
    , ouroboros-network
    , text
    , time
    , transformers
    , uuid

executable marlowe-chain-sync
  import: lang
  ghc-options: -threaded
  hs-source-dirs:   marlowe-chain-sync
  main-is: Main.hs
  other-modules:
    Logging
    Options
    Paths_marlowe_chain_sync
  autogen-modules:
    Paths_marlowe_chain_sync
  build-depends:
      base >= 4.9 && < 5
    , aeson-pretty
    , async-components
    , cardano-api
    , cardano-ledger-byron
    , containers
    , eventuo11y ^>= { 0.9, 0.10 }
    , eventuo11y-extras
    , hasql
    , hasql-pool ^>= 0.8
    , marlowe-chain-sync
    , marlowe-chain-sync:libchainsync
    , marlowe-protocols
    , network
    , optparse-applicative
    , ouroboros-network
    , text
    , uuid
