cabal-version: 3.0
name: marlowe-client
version: 0.1.0.0
synopsis:
  Run integration tests in the context of a marlowe runtime
bug-reports: https://github.com/input-output-hk/marlowe-marlowe/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: marlowe-client

library
  default-language: Haskell2010
  hs-source-dirs:   src
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
  exposed-modules:
    Control.Monad.Trans.Marlowe
    Control.Monad.Trans.Marlowe.Class
    Language.Marlowe.Runtime.Client
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async
    , async-components
    , bytestring
    , cardano-api
    , cardano-crypto-wrapper
    , cardano-ledger-byron
    , containers
    , eventuo11y
    , eventuo11y-extras
    , exceptions
    , hasql
    , hasql-pool
    , http-client
    , lifted-async
    , marlowe-cli
    , marlowe-chain-sync
    , marlowe-chain-sync:chain-indexer
    , marlowe-chain-sync:libchainsync
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:discovery-api
    , marlowe-runtime:history-api
    , marlowe-runtime:indexer
    , marlowe-runtime:sync
    , marlowe-runtime:sync-api
    , marlowe-runtime:tx
    , marlowe-runtime:tx-api
    , marlowe-runtime:proxy
    , marlowe-runtime:proxy-api
    , marlowe-runtime:web-server
    , mtl
    , monad-control
    , network
    , nonempty-containers
    , ouroboros-network
    , postgresql-libpq
    , process
    , random
    , resourcet
    , servant-client
    , stm
    , text
    , time
    , transformers
    , transformers-base
    , typed-protocols
    , uuid
    , unliftio
    , warp
