cabal-version: 3.0
name: marlowe-client
version: 0.1.0.0
synopsis:
  A client library for the Marlowe Runtime.
bug-reports: https://github.com/input-output-hk/marlowe-marlowe/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: marlowe-client

library
  default-language: Haskell2010
  hs-source-dirs:   src
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
  exposed-modules:
    Control.Monad.Trans.Marlowe
    Control.Monad.Trans.Marlowe.Class
    Language.Marlowe.Runtime.Client
  build-depends:
      base >= 4.9 && < 5
    , cardano-api
    , exceptions
    , general-allocate ^>= { 0.2 }
    , marlowe-protocols
    , marlowe-chain-sync
    , marlowe-runtime
    , marlowe-runtime:discovery-api
    , marlowe-runtime:history-api
    , marlowe-runtime:sync-api
    , marlowe-runtime:tx-api
    , marlowe-runtime:proxy-api
    , mtl
    , monad-control
    , network
    , resourcet
    , time
    , transformers
    , transformers-base
    , unliftio
