cabal-version: 3.4
name:          marlowe-client
version:       1.0.0
synopsis:      A client library for the Marlowe Runtime.
bug-reports:   https://github.com/input-output-hk/marlowe-marlowe/issues
license:       Apache-2.0
author:        Jamie Bertram
maintainer:    jamie.bertram@iohk.io
stability:     experimental
category:      Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir:   marlowe-client

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  exposed-modules:
    Control.Monad.Trans.Marlowe
    Control.Monad.Trans.Marlowe.Class
    Language.Marlowe.Runtime.Client
    Language.Marlowe.Runtime.Client.Transfer

  build-depends:
    , base >=4.9 && <5
    , cardano-api ^>=9.1
    , containers ^>=0.6.5
    , eventuo11y >=0.9 && <0.11
    , eventuo11y-extras ==0.1.1.0
    , exceptions ^>=0.10
    , general-allocate ^>=0.2
    , marlowe-chain-sync ==1.0.0
    , marlowe-object ==1.0.0
    , marlowe-protocols ==0.3.0.0
    , marlowe-runtime ==1.0.0
    , marlowe-runtime:contract-api
    , marlowe-runtime:proxy-api
    , marlowe-runtime:sync-api
    , marlowe-runtime:tx-api
    , monad-control ^>=1
    , mtl >=2.2 && <3
    , network >=3.1 && <4
    , pipes ^>=4.3.16
    , resourcet >=1.3 && <2
    , time >=1.9 && <2
    , transformers ^>=0.5.6
    , transformers-base ^>=0.4
    , unliftio ^>=0.2.1
